# xagent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: runtime_smoke.py
conformance/: README.md  __init__.py  _execution.py  _expectations.py  _model.py  _schemas.py  _tools.py  _validation.py  _values.py  case.schema.json  cli.py  coverage.md  runner.py  tools.contract.json  tools.contract.schema.json  tools.md
conformance/cases/: accept_tool_rejection_recovery.json  accepted_result_then_final.json  approval_allow.json  approval_allow_recovery.json  approval_deny.json  approval_deny_accept_recovery.json  approval_deny_recovery.json  approval_pause_before_tool_execution.json  approval_policy_guards.json  approval_request_metadata_and_scheduling_hints.json  approval_suspend.json  approval_suspend_atomic_batch.json  artifact_final.json  artifact_final_reference.json  artifact_ref_invalid.json  background_task_started_event.json  batch_policy_guards.json  boundary_pause_before_model.json  boundary_pause_during_final_model_call_completes.json  boundary_pause_during_tool_call_model_response.json  child_run_correlation.json  complete_model_history.json  continue_planning_checkpoint.json  continue_terminal_rejected.json  conversation_insert_during_model.json  conversation_insert_during_model_call.json  conversation_insert_during_tool.json  custom_tool_extension_mode.json  deadline_before_model_completion.json  empty_wait_id_invalid.json  (+86 more)
docs/: README.md  architecture.md  diagnostics.md  event-stream.md  harness.md  model-adapters.md  model-protocol.md  performance.md  public-api-audit.md  python-package-boundaries.md  releasing.md  repositories.md  state-machine.md  support.md  tool-protocol.md  wire-protocol.md
examples/: anthropic_messages.py  basic_tool_loop.py  openai_chat_completions.py  pause_resume_trace.py
python/conformance/: pyproject.toml
python/conformance/src/conformance/: __init__.py  _case.py  _fixtures.py  _schemas.py  _standard_tools.py  cli.py  runner.py
python/conformance/src/conformance/_runner/: __init__.py  api.py
python/conformance/tests/: test_conformance.py
python/diagnostics/: pyproject.toml
python/diagnostics/src/diagnostics/: __init__.py  trace.py
python/diagnostics/src/diagnostics/_trace/: __init__.py
python/diagnostics/tests/: test_diagnostics_trace.py  test_trace_replay.py
python/harness/: pyproject.toml
python/harness/src/harness/: __init__.py  messages.py  model.py
python/harness/src/harness/assertions/: __init__.py  checkpoints.py  events.py  state.py  traces.py
python/harness/src/harness/drivers/: __init__.py  actions.py  models.py
python/harness/src/harness/environment/: __init__.py  approvals.py  hooks.py  journals.py  stores.py
python/harness/src/harness/observation/: __init__.py  events.py  timeline.py
python/harness/src/harness/scenarios/: __init__.py  result.py  scenario.py
python/harness/src/harness/tools/: __init__.py  registry.py  toolkit_fixtures.py
python/harness/src/harness/workflows/: __init__.py  agent.py  inputs.py  results.py  waiting.py
python/harness/tests/: test_harness_models.py  test_harness_ports.py  test_harness_scenarios.py  test_harness_tools.py  test_harness_workflows.py  test_model.py
python/kernel/: pyproject.toml
python/kernel/examples/: basic_tool_loop.py  pause_resume_trace.py
python/kernel/src/kernel/: __init__.py  _frozen.py  _loop_helpers.py  _loop_types.py  _trace.py  _validation.py  approval.py  context.py  control.py  errors.py  events.py  journal.py  limits.py  loop.py  messages.py  models.py  resume.py  snapshot.py  state.py  status.py  store.py  tools.py
python/kernel/src/kernel/_loop/: __init__.py  agent_loop.py  helpers.py  hooks.py  timeouts.py
python/kernel/tests/: test_dependency_boundaries.py  test_errors.py  test_events.py  test_limits.py  test_loop.py  test_loop_internals.py  test_messages.py  test_models.py  test_multimodal.py  test_public_api.py  test_runtime.py  test_tools.py  test_trace.py
python/modelkit/: pyproject.toml
python/modelkit/src/modelkit/: __init__.py  stream.py
python/modelkit/tests/: test_stream.py
python/prompting/: pyproject.toml
python/prompting/src/prompting/: __init__.py  messages.py
python/prompting/tests/: test_prompting_messages.py
python/support/: pyproject.toml
python/support/src/support/: __init__.py  messages.py
python/support/src/support/assertions/: __init__.py  traces.py
python/support/src/support/drivers/: __init__.py  models.py
python/support/src/support/environment/: __init__.py  journals.py
python/support/src/support/tools/: __init__.py  registry.py
python/support/tests/: test_support_messages.py  test_support_models.py  test_support_ports.py  test_support_tools.py
python/toolkit/: pyproject.toml
python/toolkit/src/toolkit/: __init__.py  registry.py  tool.py
python/toolkit/src/toolkit/_registry/: __init__.py  api.py
python/toolkit/src/toolkit/_tool/: __init__.py
python/toolkit/tests/: test_registry.py
scripts/: clean_workspace.py  validate_spec.py  verify_distribution.py  verify_release.py  verify_testpypi.py
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: basic_tool_loop.py  pause_resume_trace.py
sdks/python/src/agent_runtime/: __init__.py  approval.py  conformance.py  control.py  errors.py  events.py  hooks.py  journal.py  limits.py  loop.py  messages.py  models.py  resume.py  runtime.py  scheduler.py  snapshot.py  state.py  store.py  tools.py  trace.py
sdks/python/src/agent_runtime_conformance/: __init__.py  runner.py
sdks/python/tests/: test_conformance.py  test_errors.py  test_events.py  test_limits.py  test_loop.py  test_messages.py  test_models.py  test_multimodal.py  test_public_api.py  test_runtime.py  test_tools.py  test_trace.py
tests/: README.md  test_contract_wire_shapes.py  test_dependency_boundaries.py  test_kernel_loop_integration.py  test_kernel_trace_integration.py  test_public_api_boundaries.py
(+97 files in other folders)
