[project]
name = "workspace"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "conformance",
  "diagnostics",
  "harness",
  "kernel",
  "modelkit",
  "prompting",
  "toolkit",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
conformance = { workspace = true }
diagnostics = { workspace = true }
harness = { workspace = true }
kernel = { workspace = true }
modelkit = { workspace = true }
prompting = { workspace = true }
toolkit = { workspace = true }

[tool.uv.workspace]
members = ["python/*"]

[dependency-groups]
dev = [
  "jsonschema>=4.23.0",
  "pyright>=1.1.407",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.2.0",
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["python", "tests"]

[tool.pyright]
include = ["python", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
