[project]
name = "jharness-workspace"
version = "0"
description = "Development workspace for the coordinated JHarness distributions"
requires-python = ">=3.11"
dependencies = [
  "jharness-kernel==0.2.2",
  "jharness-models==0.2.2",
  "jharness-repository==0.2.2",
  "jharness-toolkit==0.2.2",
  "jharness-tools==0.2.2",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "packages/jharness-kernel",
  "packages/jharness-models",
  "packages/jharness-repository",
  "packages/jharness-toolkit",
  "packages/jharness-tools",
]

[tool.uv.sources]
jharness-kernel = { workspace = true }
jharness-models = { workspace = true }
jharness-repository = { workspace = true }
jharness-toolkit = { workspace = true }
jharness-tools = { workspace = true }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
  "pymysql[rsa]>=1.2.0",
  "pyright>=1.1.407",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=6.0.0",
  "pytest-timeout>=2.4.0",
  "pyyaml>=6.0.3",
  "redis>=8.0.1",
  "ruff>=0.15.21",
  "twine>=6.2.0",
  "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90", "A", "PERF", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["conformance", "jharness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"

[tool.coverage.run]
branch = true
source = ["jharness"]

[tool.coverage.report]
fail_under = 85
precision = 1
show_missing = true
skip_covered = true

[tool.pyright]
include = ["packages", "conformance", "benchmarks", "examples", "scripts", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
