[project]
name = "conformance"
version = "0.1.0"
description = "Conformance runner for model-neutral runtime implementations"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "runtime contributors" }]
dependencies = [
  "diagnostics",
  "jsonschema>=4.23.0",
  "kernel",
  "prompting",
  "referencing>=0.35.0",
  "toolkit",
]

[project.scripts]
conformance = "conformance.cli:main"

[tool.uv.sources]
diagnostics = { workspace = true }
kernel = { workspace = true }
prompting = { workspace = true }
toolkit = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/conformance"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
