[project]
name = "harness"
version = "0.1.0"
description = "Controlled kernel scenario assembly and observation"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "runtime contributors" }]
dependencies = [
  "kernel",
]

[tool.uv.sources]
kernel = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
