[project]
name = "harness"
version = "0.1.0"
description = "Open agent workflow facade, controlled scenario assembly, and observation"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "runtime contributors" }]
dependencies = [
  "diagnostics",
  "kernel",
  "prompting",
  "toolkit",
]

[tool.uv.sources]
diagnostics = { workspace = true }
kernel = { workspace = true }
prompting = { workspace = true }
toolkit = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
