[project]
name = "support"
version = "0.1.0"
description = "Controlled runtime support fakes, fixtures, and assertions"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "runtime contributors" }]
dependencies = [
  "diagnostics",
  "harness",
  "kernel",
  "prompting",
  "toolkit",
]

[tool.uv.sources]
diagnostics = { workspace = true }
harness = { workspace = true }
kernel = { workspace = true }
prompting = { workspace = true }
toolkit = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/support"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
